# sqlite-pcre2

./: README.md
src/: CMakeLists.txt  pcre.c
